# data-study

./: .gitignore  README.md
aiagents/: chat_agent_agno.py  chat_agent_openai.py  requirements.txt
aiagents/chat-agent/: chat_agent_langgraph.py  chat_agent_pocketflow.py
aiagents/hallucination_check_agent/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
aiagents/hallucination_check_agent/assets/: example_context.txt  what_is_nli.md
aiagents/hallucination_check_agent/src/: constant.py
aiagents/hallucination_check_agent/src/agent/: get_source_agent.py
aiagents/hallucination_check_agent/src/client/: a2a_client.py  fasta2a_client.py
aiagents/hallucination_check_agent/src/server/: app_a2a.py  app_fasta2a.py  check_context_graph.py  check_search_graph.py  constant.py  dto.py  executor.py  langfuse_trace.py
aiagents/hallucination_check_agent/src/server/agent/: context_consistency_agent.py  get_source_agent.py  reason_summary_agent.py
airflow-pyspark/: Dockerfile  README.md  requirements.txt
bigcontest/: .gitignore  README.md  persona_generator.py  streamlist_app.py  streamlit_app.py
crawling/: 1_api.py  2_bs4.py  3_playwright_headful.py  3_playwright_headless.py  README.md  firecrawling.py
eks/: README.md
fastapi-pytorch-mnist/: Dockerfile  README.md  main.py  requirements.txt  test.py
machine-learning/: CNN.ipynb  Linear_Regression.ipynb  NLP_Tokenization.ipynb  Polynomial.ipynb  README.md  RL_TicTacToe.ipynb
onnx/: README.md  convert2onnx.py  convert2torch.py  load.py  model.onnx  optimize.py  run.py
simple-web-service/: README.md
(+40 files in other folders)
